--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
     <header>
-        <div class="container nav__wrapper">
+        <div class="container nav__wrapper flex-column md:flex-row">
             <span class="logo">
                 <img src="./assets/logo.png" alt="HTW Saar WIWI">
             </span>
@@ -28,10 +28,6 @@
                 </span>
             </div>
         </div>
-        <!-- <h1>HTW Saar Campus-Wegweiser</h1>
-        <p>Finden Sie Standorte wie Mensa und Druckerräume leicht!</p> -->
-
-        
     </header>
     <section class="carousel">
         <div class="embla">
