--- a/index.html
+++ b/index.html
@@ -121,27 +121,32 @@
             <img class="weg-weiser" src="./assets/wegweiser-img.jpg" alt="Bild des Wegweisers">
         </div>
     </section>
-    <section id="contact" class="booking-yt">
-        <div>
-            <h2>Kontakt & Terminbuchung</h2>
-            <p>Sie möchten mit uns sprechen? Buchen Sie einen Termin 😊:</p>
-            <a
-                class="button"
-                href="https://calendly.com/marlenekengue17/30min"
-                target="_blank"
-            >Termin buchen</a>
-        </div>
-        <div class="relative md:static overflow-hidden md:overflow-auto w-full md:h-auto bg-red-200">
-            <iframe
-              class="absolute md:static w-full md:h-auto left-0 right-0 top-0"
-                src="https://www.youtube.com/embed/zLOsksQYCkc?si=1EXXJP9AJciju-Ri"
-                title="YouTube video player"
-                frameborder="0"
-                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-                referrerpolicy="strict-origin-when-cross-origin"
-                allowfullscreen
-            ></iframe>
-        </div>
+    <section
+      id="contact"
+      class="py-8 px-4 mx-auto grid gap-2 justify-content-center"
+      style="width: min(95%, 1535px)"
+    >
+      <div class="md:col md:flex-col md:align-items-start col-12 flex justify-content-center align-items-center flex-column">
+          <h2>Kontakt & Terminbuchung</h2>
+          <p class="text-center md:text-left">Sie möchten mit uns sprechen? Buchen Sie einen Termin 😊:</p>
+          <a
+            class="button"
+            href="https://calendly.com/marlenekengue17/30min"
+            target="_blank"
+          >Termin buchen</a>
+      </div>
+      <div class="md:col col-12 flex justify-content-center align-items-center">
+          <iframe
+            class="w-full"
+            style="aspect-ratio: 16/9;"
+            src="https://www.youtube.com/embed/zLOsksQYCkc?si=1EXXJP9AJciju-Ri"
+            title="YouTube video player"
+            frameborder="0"
+            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+            referrerpolicy="strict-origin-when-cross-origin"
+            allowfullscreen
+          ></iframe>
+      </div>
     </section>
     <footer>
         <p>&copy; 2024 HTW Saar Campus-Wegweiser</p>
