--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <title>HTW Saar Campus-Wegweiser</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/leaflet/1.7.1/leaflet.css">
-    <!-- <link rel="stylesheet" href="css/index.css"> -->
   <script type="module" crossorigin src="./assets/index.js"></script>
   <link rel="stylesheet" crossorigin href="./assets/index.css">
 </head>
@@ -18,8 +17,7 @@
 
             <div style="display: flex; align-items: center; justify-content: flex-end;">
                 <nav>
-                    <a href="#map">Karte</a>
-                    <a href="#locations">Standorte</a>
+                    <a href="#map">Karte und Standorte</a>
                     <a href="#contact">Kontakt & Termine</a>
                 </nav>
                 <span class="mode-ctn">
